back et front communicant, ajout de DTO, reste à prendre en compte la modification de mot de passe et dponées personnelles + affichage rôle